--- a/teste.html
+++ b/teste.html
@@ -1,3 +1,8 @@
 <!-- oi -->
 
 <!-- aosidhjoaiushdiuoh -->
+
+<!-- aosidhjoaiushdiuoh -->
+<!-- aosidhjoaiushdiuoh -->
+
+<!-- aosidhjoaiushdiuoh -->
