--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ As atividades ocorrerÃ£o no Anfiteatro do CESA, exceto pelos minicursos que serÃ
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-  <script src="scripts_java.js"></script>
+  <script src="https://www.uel.br/eventos/semat/scripts_java.js"></script>
 </body>
 
 </html>
